--- a/CaroGame/main.css
+++ b/CaroGame/main.css
@@ -1,8 +1,11 @@
 button{
-    width: 40px;
-    height:  40px;
+    width: 20px;
+    height:  20px;
 }
 .container{
     padding-left: 20%;
     padding-top: 10%;
+}
+body.waiting * {
+    cursor: progress;
 }
